# NexusPen

NexusPen/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nexuspen.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
NexusPen/config/: config.yaml
NexusPen/core/: __init__.py  ai_analyzer.py  command_runner.py  database.py  detector.py  engine.py  logger.py  tool_manager.py  utils.py
NexusPen/modules/: __init__.py
NexusPen/modules/ad/: __init__.py  attacks.py  bloodhound.py  enumeration.py  persistence.py  recon.py  vulnerabilities.py
NexusPen/modules/common/: __init__.py  ai_assistant.py  credentials.py  cve_intel.py  encoders.py  network_utils.py  payloads.py  port_scanner.py  service_scanner.py  vuln_scanner.py
NexusPen/modules/exploit/: __init__.py  auto_exploit.py  metasploit.py  post_exploit.py  privesc.py  shellcode.py
NexusPen/modules/linux/: __init__.py  enumeration.py  persistence.py  privesc.py  recon.py  vulnerabilities.py
NexusPen/modules/network/: __init__.py  attacks.py  enumeration.py  scanner.py  vulnerabilities.py
NexusPen/modules/password/: __init__.py  bruteforce.py  cracking.py  dumping.py  spraying.py  wordlists.py
NexusPen/modules/report/: __init__.py  executive_summary.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py  xml_report.py
NexusPen/modules/web/: __init__.py  api_scanner.py  cms_scanner.py  command_injection.py  fuzzer.py  jwt_session.py  lfi_rfi.py  recon.py  sqli.py  ssrf.py  vuln_scanner.py  xss.py  xxe_ssti.py
NexusPen/modules/windows/: __init__.py  credential_access.py  enumeration.py  evasion.py  lateral_movement.py  persistence.py  privesc.py  recon.py  vulnerabilities.py
NexusPen/modules/wireless/: __init__.py  attacks.py  bluetooth.py  scanner.py  tools.py
NexusPen/tests/: __init__.py  conftest.py  test_core.py  test_password.py  test_report.py  test_web.py
